# python-api-client

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.rst  kanboard.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_kanboard.py  tox.ini
.github/workflows/: ci.yml  linters.yml  publish.yml
kanboard/: __init__.py  client.py  exceptions.py  kanboard.py
kanboard/tests/: test_kanboard.py
tests/: test_kanboard.py
