[metadata]
name = kanboard
author = Frédéric Guillot
author-email = fred@kanboard.net
summary = Kanboard API client
description-file = README.rst
home-page = https://github.com/kanboard/kanboard-api-python
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords =
    kanboard
    api
[files]
packages =
    kanboard
